# Diabetic_Retinopathy_Classifier_Mobile_App

./: README.md  ft_monbile_net_img_classif_eye_diabetic_retin (1).ipynb  ft_monbilenet_img_classif_DR_v2.ipynb  misclassified_images.csv  misclassified_images_v2.csv  settings.gradle.kts
ai_notebooks/: ft_monbilenet_img_classif_DR.ipynb  ft_monbilenet_img_classif_DR_v2_submit.ipynb  pyproject.toml  test_model.py
app/: build.gradle.kts
app/src/androidTest/java/com/example/mydiabclassapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/mydiabclassapp/: MainActivity.kt
app/src/main/java/com/example/mydiabclassapp/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/mydiabclassapp/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
